# piano_filter

./: .gitignore  README.md  config.py  filter.py  main.py  pyproject.toml
audio/: __init__.py  capture.py
detection/: __init__.py  yamnet_detector.py
state/: __init__.py  machine.py
volume/: __init__.py  controller.py
