[project]
name = "piano-filter"
version = "0.1.0"
description = "Automatically reduce volume when piano sound is detected from system audio"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=1.24.0",
    "tensorflow>=2.15.0",
    "tensorflow-hub>=0.15.0",
    "sounddevice>=0.4.6",
    "pycaw>=20240210",
    "comtypes>=1.4.1",
    "resampy>=0.4.2",
]
